--- a/arch/arm64/boot/dts/amlogic/meson-sm1-tx3-qz.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-sm1-tx3-qz.dts
@@ -191,6 +191,7 @@
 		compatible = "brcm,bcm4330-bt";
 		clocks = <&wifi32k>;
 		clock-names = "lpo";
+                status = "disabled";
 	};
 };
 
