--- a/arch/arm64/boot/dts/amlogic/meson-sm1-tx3-qz.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-sm1-tx3-qz.dts
@@ -188,10 +188,9 @@
 	uart-has-rtscts;
 
 	bluetooth {
-		compatible = "brcm,bcm4330-bt";
+		compatible = "realtek,rtl8723bs-bt";
 		clocks = <&wifi32k>;
 		clock-names = "lpo";
-                status = "disabled";
 	};
 };
 
