--- a/arch/arm64/boot/dts/amlogic/meson-sm1-tx3-bz.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-sm1-tx3-bz.dts
@@ -160,7 +160,7 @@
 	uart-has-rtscts;
 
 	bluetooth {
-		compatible = "brcm,bcm43438-bt";
+		compatible = "realtek,rtl8723bs-bt";
 		shutdown-gpios = <&gpio GPIOX_17 GPIO_ACTIVE_HIGH>;
 		max-speed = <2000000>;
 		clocks = <&wifi32k>;
