--- a/arch/arm64/boot/dts/amlogic/meson-sm1-x96-air-gbit.dts
+++ b/arch/arm64/boot/dts/amlogic/meson-sm1-x96-air-gbit.dts
@@ -145,7 +145,7 @@
 	uart-has-rtscts;
 
 	bluetooth {
-		compatible = "realtek,rtl8723bs-bt";
+		compatible = "realtek,rtl8822cs-bt";
 		interrupt-parent = <&gpio_intc>;
 		interrupts = <95 IRQ_TYPE_LEVEL_HIGH>;
 		interrupt-names = "host-wakeup";
